[gd_scene load_steps=10 format=3 uid="uid://b21pxqdwvf6xj"]

[ext_resource type="Script" path="res://Scenes/Entity/Axolotl/axolotl.gd" id="1_msa3a"]
[ext_resource type="PackedScene" uid="uid://boxh80ron7d6o" path="res://Scenes/Entity/Axolotl/axolotly_green_animated_sprite.tscn" id="2_0xmex"]
[ext_resource type="Script" path="res://Scripts/State/state_machine.gd" id="8_rvtcr"]
[ext_resource type="Texture2D" uid="uid://d2lyfxi085yxw" path="res://Assets/Axolotl/Santa Hats/Roscoe_Santa_Hat.png" id="8_w0be5"]
[ext_resource type="Script" path="res://Scripts/State/idle_sleeping.gd" id="9_2wgbs"]
[ext_resource type="Script" path="res://Scripts/State/idle_floating.gd" id="10_kww32"]
[ext_resource type="Script" path="res://Scripts/State/swimming.gd" id="11_y5gx4"]
[ext_resource type="Script" path="res://Scripts/State/idle_floating_sleeping.gd" id="12_2fio7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pkqob"]
size = Vector2(32, 32)

[node name="Axolotl" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_msa3a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -16)
shape = SubResource("RectangleShape2D_pkqob")

[node name="AxolotlyAnimatedSprite" parent="." instance=ExtResource("2_0xmex")]

[node name="SantaHat" type="Node2D" parent="."]
position = Vector2(2, -16)

[node name="SantaHatSprite" type="Sprite2D" parent="SantaHat"]
position = Vector2(-3, -2)
rotation = 3.14159
scale = Vector2(0.380748, 0.393577)
texture = ExtResource("8_w0be5")
offset = Vector2(8.57769, 32.9904)
flip_h = true
flip_v = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = -17.0
offset_right = 18.0
offset_bottom = 23.0
theme_override_colors/default_color = Color(0.619608, 0.992157, 0.882353, 1)
theme_override_colors/font_shadow_color = Color(0.157607, 0.376879, 0.360327, 1)
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "Charge"
fit_content = true

[node name="Sleep_Timer" type="Timer" parent="."]

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("8_rvtcr")
initial_state = NodePath("Sleeping")

[node name="Sleeping" type="Node" parent="StateMachine"]
script = ExtResource("9_2wgbs")
sleep_strength = 3

[node name="Floating" type="Node" parent="StateMachine"]
script = ExtResource("10_kww32")
idle_timer = 5

[node name="Swimming" type="Node" parent="StateMachine"]
script = ExtResource("11_y5gx4")

[node name="Idle Floating" type="Node" parent="StateMachine"]
script = ExtResource("12_2fio7")
idle_timer = 5

[connection signal="timeout" from="Sleep_Timer" to="StateMachine/Floating" method="_on_sleep_timer_timeout"]
